# MNIST_99_4_VA_20K

./: MNIST_U20K_99_4P.ipynb  README.md  changelog.md  pyproject.toml
.ipynb_checkpoints/: MNIST_U20K_99_4P-checkpoint.ipynb
